[gd_scene load_steps=2 format=3 uid="uid://dskg1evbw1dv"]

[ext_resource type="Script" path="res://examples/bobble/bobble.gd" id="1_67bh4"]

[node name="Bobble" type="Node2D"]
script = ExtResource("1_67bh4")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 1196.0
offset_bottom = 800.0

[node name="chat_history" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 597.0
offset_right = 1024.0
offset_bottom = 726.0
text = "

"
scroll_following = true

[node name="chat_input" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 18.0
offset_top = 734.0
offset_right = 1109.0
offset_bottom = 778.0
placeholder_text = "Type a chat message..."

[node name="secret_button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1043.0
offset_top = 622.0
offset_right = 1186.0
offset_bottom = 716.0
text = "Secret button
What will it do? :)"

[node name="chat_send" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1116.0
offset_top = 734.0
offset_right = 1186.0
offset_bottom = 778.0
text = "Send"

[node name="con_count_label" type="Label" parent="UI"]
layout_mode = 0
offset_right = 223.0
offset_bottom = 23.0
text = "Connections: 0"

[node name="Players" type="Node2D" parent="."]

[connection signal="text_submitted" from="UI/chat_input" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="UI/secret_button" to="." method="_on_secret_button_pressed"]
[connection signal="pressed" from="UI/chat_send" to="." method="_on_chat_send_pressed"]
